# fse-tech-test-sept25

./: Makefile  README.md  example-receipt1.txt  example-receipt2.csv  pyproject.toml
expenses_tracker/: app.py
expenses_tracker/templates/: index.html  receipts.html  summary.html
